tests/baselines/reference/tsxCorrectlyParseLessThanComparison1.errors.txt
tsxCorrectlyParseLessThanComparison1.tsx(14,22): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.


==== tsxCorrectlyParseLessThanComparison1.tsx (1 errors) ====
    declare module JSX {
        interface Element {
            div: string;
        }
    }
    declare namespace React {
        class Component<P, S> {
            constructor(props?: P, context?: any);
            props: P;
        }
    }
    
    export class ShortDetails extends React.Component<{ id: number }, {}> {
        public render(): JSX.Element {
                         ~~~~~~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
            if (this.props.id < 1) {
                return (<div></div>);
            }
        }
    }